feature(books):admin CRUD books
Add endpoints for admin user to create, read, update and delete books
Modify database structure
Refactor token decoding

[Finishes #166237836]
