# hello-books-swagger.json
@@ -126,34 +126,6 @@
         }
       }
     },
-    "/books": {
-      "post": {
-        "tags": [
-          "Books"
-        ],
-        "summary": "Handles books' Adding a new book to the application",
-        "description": "This endpoint adds a new book to the books to the library",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "This is the request body object containing books' addition information.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/addBookRequest"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Book created successfully"
-          }
-        }
-      }
-    },
     "/verifyEmail/:email/:verifyCode": {
       "patch": {
         "tags": ["Users"],
@@ -317,6 +289,254 @@
           }
         }
       }
+    },
+    "/books": {
+      "post": {
+        "tags": ["Books"],
+        "summary": "Add a Book to The Library",
+        "description": "This endpoint enables users to add books to the library",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "This is the request body object containing books' information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Book"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book Successfully Added"
+          },
+          "400": {
+            "description": "Incorrectly field filled"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Books"],
+        "summary": "Get all Books in The Library",
+        "description": "This endpoint enables users fetch all books the library",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Books Successfully Returned",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "array",
+                  "example": [
+                    {
+                      "id": 2,
+                      "title": "Antman & The Wasp",
+                      "body": "Antman is back!",
+                      "description": "Scott Lang teams up with the Wasp to save the world again",
+                      "pages": "70",
+                      "verification": "pending",
+                      "createdOn": "2019-06-19T11:48:57.366Z",
+                      "hardcopy": true,
+                      "status": "available",
+                      "uploadId": null,
+                      "authorName": "Stan Lee",
+                      "genre": "Fantasy",
+                      "uploader": "kyloRen"
+                    },
+                    {
+                      "id": 3,
+                      "title": "X-Men: First Class",
+                      "body": "Travel back in time with the X-Men!",
+                      "description": "The X-Men is born, a new breed of mutants save the world",
+                      "pages": "70",
+                      "verification": "pending",
+                      "createdOn": "2019-06-19T11:48:57.374Z",
+                      "hardcopy": true,
+                      "status": "available",
+                      "uploadId": null,
+                      "authorName": "Stan Lee",
+                      "genre": "Fantasy",
+                      "uploader": "kyloRen"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "No books found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/books/{id}": {
+      "patch": {
+        "tags": ["Books"],
+        "summary": "Reject or Verify a Book",
+        "description": "This endpoint enables admins to verify or reject books added to the library",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of book",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "This is the request body object containing books' information",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "verification": {
+                  "type": "object",
+                  "example": "verified"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book Verification status successfully changed"
+          },
+          "400": {
+            "description": "Incorrectly filled field"
+          },
+          "401": {
+            "description": "Unauthorized access by a non-admin"
+          },
+          "404": {
+            "description": "Book to be verified does not exist"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Books"],
+        "summary": "Get a Book in The Library",
+        "description": "This endpoint enables users fetch a book the library",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of book",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book Successfully Returned",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "object",
+                  "example": {
+                    "id": 2,
+                    "title": "Antman & The Wasp",
+                    "body": "Antman is back!",
+                    "description": "Scott Lang teams up with the Wasp to save the world again",
+                    "pages": "70",
+                    "verification": "pending",
+                    "createdOn": "2019-06-19T11:48:57.366Z",
+                    "hardcopy": true,
+                    "status": "available",
+                    "uploadId": null,
+                    "authorName": "Stan Lee",
+                    "genre": "Fantasy",
+                    "uploader": "kyloRen"
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Books"],
+        "summary": "Delete a Book",
+        "description": "This endpoint deletes a book from the library",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of book",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book deleted successfully",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "object",
+                  "example": {
+                    "bookId": "This book has been successfully deleted"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unathorized access"
+          },
+          "404": {
+            "description": "Book to be deleted not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
     }
   },
   "definitions": {
@@ -409,41 +629,47 @@
         "favoriteAuthor": "Medium"
       }
     },
-    "AddBookRequest": {
-			"title": "Add new book request",
-			"type": "object",
-			"properties": {
-				"title": {
-					"description": "Book title or name",
-					"type": "string"
-				},
-				"body": {
-					"description": "Some little details about the book",
-					"type": "string"
-				},
-				"description": {
-					"description": "Well descriptive details or information about the book and why it should be read",
-					"type": "string"
-				},
-				"genre": {
-					"description": "The style or category of the book",
-					"type": "string"
-				},
-				"pages": {
-					"description": "Number of pages the book has",
-					"type": "Number"
+    "Book": {
+      "title": "Book Schema",
+      "type": "object",
+      "properties": {
+        "title": {
+          "description": "Book title or name",
+          "type": "string"
+        },
+        "body": {
+          "description": "Some little details about the book",
+          "type": "string"
+        },
+        "description": {
+          "description": "Well descriptive details or information about the book and why it should be read",
+          "type": "string"
+        },
+        "genre": {
+          "description": "The style or category of the book",
+          "type": "string"
+        },
+        "hardcopy": {
+          "description": "The type of book could be softcopy or paperback",
+          "type": "boolean"
+        },
+        "pages": {
+          "description": "Number of pages the book has",
+          "type": "number"
         },
         "author": {
-					"description": "The person that wrote the book (book owner)",
-					"type": "String"
-				},
-        "example": {
-          "title": "Harry Potter",
-          "body": "Harry Potter and the order of Phoenix",
-          "description": "The book gives insight about Loyalty, friendship and bravery by young people. And also defeating evil and restoring glory to a great school",
-          "genre": "Science Fiction",
-          "pages": 475
+          "description": "The person that wrote the book (book owner)",
+          "type": "String"
         }
+      },
+      "example": {
+        "title": "Harry Potter",
+        "body": "Harry Potter and the order of Phoenix",
+        "description": "The book gives insight about Loyalty, friendship and bravery by young people. And also defeating evil and restoring glory to a great school",
+        "genre": "Science Fiction",
+        "hardcopy": true,
+        "pages": 475,
+        "author": "JK Rowling"
       }
     },
     "UserPasswordResetRequest": {
@@ -459,7 +685,7 @@
           "type": "string or number"
         },
         "example": {
-          "userLogin":"example@user.com",
+          "userLogin": "example@user.com",
           "newPassword": "1234",
           "confirmPassword": "1234"
         }
@@ -478,7 +704,7 @@
           "type": "string or number"
         },
         "example": {
-          "userLogin":"example@user.com",
+          "userLogin": "example@user.com",
           "newPassword": "1234",
           "confirmPassword": "1234"
         }
