# server/config/buildTables.js
@@ -3,7 +3,17 @@ import pool from '.';
 
 const debug = Debug('db');
 
-const userTableQuery = `
+const tablesQuery = `
+  CREATE TYPE "verification_status" AS ENUM (
+  'verified',
+  'rejected',
+  'pending'
+  );
+  CREATE TYPE "lend_status" AS ENUM (
+  'borrowed',
+  'available'
+  );
+
   CREATE TABLE IF NOT EXISTS users(
     id SERIAL PRIMARY KEY,
     "userName" VARCHAR(100) UNIQUE NOT NULL,
@@ -18,18 +28,23 @@ const userTableQuery = `
     "emailConfirmCode" VARCHAR(64),
     "createdOn" TIMESTAMPTZ DEFAULT now() NOT NULL
   );
-  CREATE TABLE IF NOT EXISTS books(
-    id SERIAL PRIMARY KEY,
-    title VARCHAR(100) UNIQUE NOT NULL,
-    body VARCHAR(100) NOT NULL,
-    description TEXT NOT NULL,
-    genre VARCHAR(100) NOT NULL,
-    pages NUMERIC(250) NOT NULL,
-    author VARCHAR(100) NOT NULL
-  );
-`;
 
-const userProfileTableQuery = `
+  CREATE TABLE "books" (
+  "id" SERIAL PRIMARY KEY,
+  "title" VARCHAR(100) NOT NULL,
+  "body" VARCHAR(100) NOT NULL,
+  "description" TEXT NOT NULL,
+  "genreId" INT NOT NULL,
+  "pages" NUMERIC(250) NOT NULL,
+  "authorId" INT NOT NULL,
+  "uploadedBy" INT NOT NULL,
+  "verification" "verification_status" DEFAULT 'pending',
+  "createdOn" TIMESTAMPTZ DEFAULT now() NOT NULL,
+  "hardcopy" boolean,
+  "status" "lend_status" DEFAULT 'available',
+  "uploadId" INT
+);
+
   CREATE TABLE IF NOT EXISTS user_profiles(
     "userId" INTEGER UNIQUE REFERENCES users(id) ON DELETE CASCADE,
     "bio" VARCHAR,
@@ -40,25 +55,43 @@ const userProfileTableQuery = `
     "createdOn" TIMESTAMPTZ DEFAULT now() NOT NULL,
     PRIMARY KEY ("userId")
   );
-`;
 
-const rolesTableQuery = `
-    CREATE TABLE IF NOT EXISTS roles(
+  CREATE TABLE IF NOT EXISTS roles(
       id SERIAL PRIMARY KEY,
       name VARCHAR(100) UNIQUE NOT NULL
-    );
-`;
+  );
 
-const bookTableQuery = `
-CREATE TABLE IF NOT EXISTS books(
+  CREATE TABLE "authors" (
+  "id" SERIAL PRIMARY KEY,
+  "name" VARCHAR
+  );
+
+  CREATE TABLE "ebooks" (
   id SERIAL PRIMARY KEY,
-  title VARCHAR(100) UNIQUE NOT NULL,
-  body VARCHAR(100) NOT NULL,
-  description TEXT NOT NULL,
-  genre VARCHAR(100) NOT NULL,
-  author VARCHAR(100) NOT NULL,
-  pages NUMERIC(250) NOT NULL
+  "filename" varchar,
+  "filePath" varchar UNIQUE
+  );
+
+  CREATE TABLE "genre" (
+  id SERIAL PRIMARY KEY,
+  "name" VARCHAR
 );
+
+ALTER TABLE "users" ADD FOREIGN KEY ("role") REFERENCES "roles" ("id");
+
+ALTER TABLE "user_profiles" 
+ADD FOREIGN KEY ("userId") REFERENCES "users" ("id");
+
+ALTER TABLE "books" ADD FOREIGN KEY ("genreId") REFERENCES "genre" ("id");
+
+ALTER TABLE "books" ADD FOREIGN KEY ("authorId") REFERENCES "authors" ("id");
+
+ALTER TABLE "books" ADD FOREIGN KEY ("uploadedBy") REFERENCES "users" ("id");
+
+ALTER TABLE "books" ADD FOREIGN KEY ("uploadId") REFERENCES "ebooks" ("id");
+
+INSERT INTO roles (name) 
+VALUES ('user'), ('author'), ('cashier'), ('admin'), ('superAdmin');
 `;
 
 /**
@@ -68,15 +101,12 @@ CREATE TABLE IF NOT EXISTS books(
  */
 const createTable = async () => {
   try {
-    await pool.query(`${userTableQuery}
-    ${userProfileTableQuery}
-    ${bookTableQuery}
-    ${rolesTableQuery}
- `);
+    await pool.query(`${tablesQuery}
+`);
     debug('Tables created successfully');
   } catch (error) {
     debug(error);
-    await pool.query(`${userTableQuery}`);
+    return error;
   }
 };
 
